falta resolver errores en test